--- a/index.html
+++ b/index.html
@@ -17,5 +17,13 @@
     <header>
         <h1>Meet Our Team</h1>
     </header>
+    <main>
+        <div class="description">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa at exercitationem commodi, reprehenderit animi officiis id error obcaecati alias temporibus molestiae delectus, rerum similique autem excepturi voluptas nam, et fuga?
+        </div>
+        <section class="card">
+            <div class="immagine"></div>
+        </section>
+    </main>
 </body>
 </html>
