First card done

--- a/index.html
+++ b/index.html
@@ -22,7 +22,12 @@
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa at exercitationem commodi, reprehenderit animi officiis id error obcaecati alias temporibus molestiae delectus, rerum similique autem excepturi voluptas nam, et fuga?
         </div>
         <section class="card">
-            <div class="immagine"></div>
+            <div class="info-box">
+                <img src="img/male1.png" alt="">
+                <h2 class="info">MARCO BIANCHI</h2>
+                <span class="info">Designer</span>
+                <a href="mailto:marcobianchi@team.com" class="info email">marcobianchi@team.com</a>
+            </div>
         </section>
     </main>
 </body>
