--- a/index.html
+++ b/index.html
@@ -23,10 +23,50 @@
         </div>
         <section class="card">
             <div class="info-box">
-                <img src="img/male1.png" alt="">
+                <img src="img/male1.png" alt="Foto di marco">
                 <h2 class="info">MARCO BIANCHI</h2>
                 <span class="info">Designer</span>
                 <a href="mailto:marcobianchi@team.com" class="info email">marcobianchi@team.com</a>
+            </div>
+        </section>
+        <section class="card">
+            <div class="info-box">
+                <img src="img/female1.png" alt="Foto di laura">
+                <h2 class="info">LAURA ROSSI</h2>
+                <span class="info">Front-end Developer</span>
+                <a href="mailto:laurarossi@team.com" class="info email">laurarossi@team.com</a>
+            </div>
+        </section>
+        <section class="card">
+            <div class="info-box">
+                <img src="img/male2.png" alt="">
+                <h2 class="info">GIORGIO VERDI</h2>
+                <span class="info">Back-end Developer</span>
+                <a href="mailto:giorgioverdi@team.com" class="info email">giorgioverdi@team.com</a>
+            </div>
+        </section>
+        <section class="card">
+            <div class="info-box">
+                <img src="img/female2.png" alt="">
+                <h2 class="info">MARTA IPSUM</h2>
+                <span class="info">SEO Specialist</span>
+                <a href="mailto:martaipsum@team.com" class="info email">martaipsum@team.com</a>
+            </div>
+        </section>
+        <section class="card">
+            <div class="info-box">
+                <img src="img/male3.png" alt="">
+                <h2 class="info">ROBERTO LOREM</h2>
+                <span class="info">Project Manager</span>
+                <a href="mailto:robertolorem@team.com" class="info email">robertolorem@team.com</a>
+            </div>
+        </section>
+        <section class="card">
+            <div class="info-box">
+                <img src="img/female3.png" alt="">
+                <h2 class="info">DANIELA AMET</h2>
+                <span class="info">Analyst</span>
+                <a href="mailto:danielaamet@team.com" class="info email">danielaamet@team.com</a>
             </div>
         </section>
     </main>
